Container: layout base class (position/size/scale/anchors/percent/z/flags); Panel is structural subclass with color, filters, tree